force-app/main/default/objects/uBox_Log__c/uBox_Log__c.object-meta.xml
<CustomObject>
    <description>Logs user creation and edit actions performed through uBox, including assignment outcomes.</description>
    <label>uBox Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>uBox Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>