force-app/main/default/objects/uBox_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Which operation was performed</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create User</fullName>
            </value>
            <value>
                <fullName>Edit User</fullName>
            </value>
            <value>
                <fullName>Assign Permission Set</fullName>
            </value>
            <value>
                <fullName>Unassign Permission Set</fullName>
            </value>
            <value>
                <fullName>Assign Permission Set Group</fullName>
            </value>
            <value>
                <fullName>Unassign Permission Set Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>