force-app/main/default/objects/uBox_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>JSON or human-readable summary of what was assigned/removed and any errors</description>
    <label>Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>