force-app/main/default/objects/uBox_Log__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The admin who triggered the action</description>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>uBox_Logs_Performed</relationshipName>
    <type>Lookup</type>
</CustomField>