force-app/main/default/objects/uBox_Log__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user being created or edited</description>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>uBox_Logs_Target</relationshipName>
    <type>Lookup</type>
</CustomField>