force-app/main/default/objects/uBox_Log__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Performed_By__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>