force-app/main/default/objects/uBox_Log__c/listViews/Error_Logs.listView-meta.xml
<ListView>
    <fullName>Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Performed_By__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Partial Success,Error</value>
    </filters>
    <label>Error Logs</label>
</ListView>